<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="8dp"
        android:id="@+id/imageView"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/realname"
        android:id="@+id/realname"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="8dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/name"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        android:textStyle="normal"
        android:layout_margin="8dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/team"
        android:id="@+id/team"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        android:textStyle="normal"
        tools:visibility="visible" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/firstappearance"
        android:text="@string/firstappearance"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        android:textStyle="normal"
    android:layout_margin="8dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createdby"
        android:id="@+id/createdby"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        android:textStyle="normal"
        android:layout_margin="8dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/publisher"
        android:id="@+id/publisher"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        android:textStyle="normal"
        android:layout_margin="8dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bio"
        android:id="@+id/bio"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        android:textStyle="normal"
        android:layout_margin="8dp"/>
</LinearLayout>


    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

