<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@color/white"
    card_view:cardCornerRadius="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="@dimen/_56dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/student"
            android:id="@+id/imageView"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="80dp"
            android:padding="8dp"
            android:layout_marginLeft="80dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_gravity="center"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/realname"
                    android:id="@+id/realname"
                    android:textColor="@color/purple_500"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:id="@+id/name"
                    android:textColor="@color/purple_500"
                    android:textSize="20sp"
                    android:textStyle="normal" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/team"
                    android:id="@+id/team"
                    android:textColor="@color/purple_500"
                    android:textSize="20sp"
                    android:textStyle="normal"
                     />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/firstappearance"
                    android:text="@string/firstappearance"
                    android:textColor="@color/purple_500"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    />


               <!-- <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/createdby"
                    android:id="@+id/createdby"
                    android:textColor="@color/purple_500"
                    android:textSize="20sp"
                    android:textStyle="normal" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/publisher"
                    android:id="@+id/publisher"
                    android:textColor="@color/purple_500"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bio"
                    android:id="@+id/bio"
                    android:textColor="@color/purple_500"
                    android:textSize="20sp"
                    android:textStyle="normal"
                />-->
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>